# distributed_mapper_catkin

./: CMakeLists.txt  package.xml
include/distributed_mapper/: distributed_mapper.h  distributed_mapper_utils.h
include/pairwise_consistency_maximization/distributed_pcm/: distributed_pcm.h
include/pairwise_consistency_maximization/global_map/: global_map.h
include/pairwise_consistency_maximization/graph_utils/: graph_utils_functions.h
include/pairwise_consistency_maximization/pairwise_consistency/: pairwise_consistency.h
include/pairwise_consistency_maximization/robot_measurements/: robot_measurements.h
src/distributed_mapper/: distributed_mapper.cpp  distributed_mapper_utils.cpp  evaluation_utils.cpp
src/pairwise_consistency_maximization/distributed_pcm/: distributed_pcm.cpp
src/pairwise_consistency_maximization/global_map/: global_map.cpp
src/pairwise_consistency_maximization/third_parties/fast_max-clique_finder/src/: graphIO.cpp
